<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KHADRAWY market</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="khadrawy">KHADRAWY</string>
    <string name="market">market</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New user? Sign Up</string>
    <string name="sign_out">Sign out</string>
    <string name="pref_status">status</string>
    <string name="pref_user_name">pref_use_name</string>
    <string name="pref_user_token">pref_user_token</string>
    <string name="pref_user_phone">pref_user_phone</string>
    <string name="pref_user_email">pref_user_email</string>
    <string name="pref_user_id">pref_user_id</string>
    <string name="pref_user_points">pref_user_points</string>
    <string name="pref_user_credit">pref_user_credit</string>
    <string name="pref_user_image_url">pref_user_image_url</string>
    <string name="pref_is_image_ready">pref_is_image_ready</string>
    <string name="pref_user_image">pref_user_image</string>
    <string name="account">Account</string>
    <string name="login_now">Login now</string>
    <string name="click_here_to_login">click here to login</string>
    <string name="membership_points">Membership points</string>
    <string name="_0">0</string>
    <string name="points">points</string>
    <string name="cash_wallet">Cash Wallet</string>
    <string name="dollar_sign">$</string>
    <string name="_0_00">0.00</string>
    <string name="back_button">back_button</string>
    <string name="todo">TODO</string>
    <string name="referral_code">Referral Code:</string>
    <string name="_00000000">00000000</string>
    <string name="introduce_your_friends_to_join_and_receive_rewards">Introduce your friends to join and receive rewards</string>
    <string name="tap_to_view_contact_information">Tap to view contact information</string>
    <string name="about_us">About Us</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="f_a_q">F A Q</string>
    <string name="answers_of_popular_questions">Answers of popular questions</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="version">version 1.0</string>
    <string name="sign_up">Sign up</string>
    <string name="notifications">Notifications</string>
    <string name="search" tools:ignore="TypographyEllipsis">Search...</string>
    <string name="category_name">Category name</string>
    <string name="category_id">category_id</string>
    <string name="details">Details</string>
    <string name="_1_1">1 / 1</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description:</string>
    <string name="price">price</string>
    <string name="old_price">$10</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="categories">Categories</string>
    <string name="discount_voucher">Discount Voucher</string>
    <string name="prevent_corona">Prevent Corona</string>
    <string name="contact_n_us">Contact \n Us</string>
    <string name="chat_support">Chat Support</string>
    <string name="cancel">Cancel</string>
    <string name="iphone_12_265gb_6gb_ram">iphone 12 265GB 6GB ram</string>
    <string name="about_us_and_our_terms"><![CDATA[About Us & Our terms]]></string>
    <string name="lorem_ipsum_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="total">Total: </string>
    <string name="cart">Cart</string>
    <string name="order_now">Order now</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="looks_like_you_haven_t_add_any_item_yet">Looks like you haven\'t add any item yet.</string>
    <string name="shop_now">Shop now</string>
    <string name="no_products_found">No products found</string>
    <string name="contact_us">Contact Us</string>
    <string name="visit_our_facebook_page">Visit our facebook page</string>
    <string name="fb_com_ourPage">FB.com/ourPage</string>
    <string name="subscribe_our_channel">Subscribe our channel</string>
    <string name="youtube_com_ourChannel">youtube.com/ourChannel</string>
    <string name="rate_us_on_google_play">Rate us on google play</string>
    <string name="play_google_com_store_ourApp">play.google.com/store/ourApp</string>
    <string name="follow_us_on_twitter">Follow us on twitter</string>
    <string name="twitter_com_ourPage">twitter.com/ourPage</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="www_khadrawy_com">www.khadrawy.com</string>
    <string name="favorites">Favorites</string>
    <string name="my_account">My Account</string>
    <string name="full_name">Full name</string>
    <string name="mohamed_khedr">Mohamed Khedr</string>
    <string name="phone_number">Phone number</string>
    <string name="_01026730615">01026730615</string>
    <string name="e_mail">E-mail</string>
    <string name="mkheeedr_gmail_com">mkheeedr@gmail.com</string>
    <string name="address">Address</string>
    <string name="mansoura_adaqahlya">Mansoura, Adaqahlya</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="update_profile">Update profile</string>
    <string name="name">Name</string>
    <string name="new_password">New Password</string>
    <string name="re_password">Re-password</string>
    <string name="update">Update</string>
    <string name="orders">Orders</string>
    <string name="your_orders_list_is_empty">Your Orders list is empty</string>
    <string name="looks_like_you_haven_t_made_your_order_yet">Looks like you haven\'t made your order yet.</string>
    <string name="to_cart">To Cart</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="_10">10%</string>
    <string name="english_lang">English</string>
    <string name="arabic_lang">عربي</string>
    <string name="connection_error">Sorry, connection error</string>
    <string name="select_profile_image">please select a profile Image</string>
    <string name="you_should_login_first">You should login first</string>
    <string name="failed_to_load_image">failed to load image</string>
    <string name="toast_sorry">Sorry, </string>
    <string name="system_default">System default</string>
    <string name="pref_app_language">pref_app_language</string>
    <string name="home">Home</string>
    <string name="notify">Notify</string>
    <string name="order">Order</string>
    <string name="you_can_login_now">" You can login now"</string>
    <string name="enter_full_name">please enter full name</string>
    <string name="max_words_4">sorry max words allowed is 4</string>
    <string name="Invalid_phone">phone is not valid</string>
    <string name="invalid_email">email is not valid</string>
    <string name="short_password">password must be 6 letters at least</string>
    <string name="invalid_repassword">\"re-password is not equal the password \"</string>
    <string name="wait">Please wait…</string>
    <string name="reconnect">Reconnect</string>
    <string name="splash_intent">from_splash_intent</string>
    <string name="coming_soon">Coming soon</string>
    <string name="delete">Delete</string>
    <string name="delete_product">Delete Product</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="add_product_to_cart">Add product to cart</string>
    <string name="quantity_updated">Quantity updated successfully</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Update_quantity">Update product quantity</string>
    <string name="already_in_cart">This Product is already in cart</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="view_all">View all</string>
    <string name="products_intent">products_intent</string>
    <string name="best_brands">Best Brands</string>
    <string name="apple">Apple</string>
    <string name="samsung">Samsung</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="nike">Nike</string>
    <string name="sony">Sony</string>
    <string name="add_order">Add Order</string>
    <string name="select_a_payment_method">Select a payment method</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="online_payment">Online payment</string>
    <string name="pay_online_description">We will call you back to confirm the order. After confirmation, we will proceed to pick up, pack, issue bills and will notify the actual bill for you to transfer.</string>
    <string name="cash_payment_description">The delivery staff goes to your door, you give the money according to the value of the application and delivery fees for employees.</string>
    <string name="credit_card_number">**** **** **** </string>
    <string name="complete_order">Complete order</string>
    <string name="order_total">order_total</string>
    <string name="add_new_address">Add new address</string>
    <string name="city">City</string>
    <string name="address_details">Address details</string>
    <string name="region">Region</string>
    <string name="address_name">Address name</string>
    <string name="notes_about_address">Notes about Address</string>
    <string name="add_address">Add Address</string>
    <string name="my_addresses">My Addresses</string>
    <string name="edit_address">Edit Address</string>
    <string name="update_address">Update address</string>
    <string name="delete_address">Delete address</string>
    <string name="city_name_error_message">please insert city name</string>
    <string name="region_name_error_message">please insert region name</string>
    <string name="address_details_error_message">please insert address details</string>
    <string name="address_name_error_message">please insert address name</string>
    <string name="expanded_city">City:</string>
    <string name="expanded_region">Region:</string>
    <string name="expanded_details">Details:</string>
    <string name="select_shipping_address">Select shipping Address</string>
    <string name="do_you_want_to_use_discount_points">Do you want to use discount points?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cost">Cost:</string>
    <string name="vat">Vat:</string>
    <string name="points_discount">Points discount:</string>
    <string name="voucher_discount">Voucher discount:</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="do_you_want_to_use_a_discount_voucher">Do you want to use a discount voucher?</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="check">Check</string>
    <string name="shipping_expenses_free">Shipping expenses: Free</string>
    <string name="empty_promo_code">promo code shouldn\'t be empty</string>
    <string name="valided_promo_code">Valid promo code ✔</string>
    <string name="please_select_payment_method">Please select payment method</string>
    <string name="please_select_shipping_address">Please select a shipping address</string>
</resources>