<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/home_option"
        android:icon="@drawable/ic_shop"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/notifications_option"
        android:icon="@drawable/ic_alarm"
        android:title="@string/notify"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/under_fab_option"
        android:title="      "

        />
    <item
        android:id="@+id/order_option"
        android:icon="@drawable/ic_bag"
        android:title="@string/order"
        app:showAsAction="always" />

    <item
        android:id="@+id/account_option"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        app:showAsAction="always" />

</menu>
