<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.khedr.ecommerce.ui.activities.profile.ProfileActivity">

        <TextView
            android:id="@+id/main_tv_my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/my_account"
            android:textColor="@color/secondary"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bt_profile_back"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/back_button"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:rotation="180"
            android:src="@drawable/ic_blue_right_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bt_profile_edit_user_info"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:contentDescription="@string/todo"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:src="@drawable/ic_account_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_42sdp"
            android:fillViewport="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_tv_my_account">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ScrollViewSize">

                <LinearLayout
                    android:id="@+id/layout_profile_user_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20sdp"
                    android:elevation="@dimen/_1sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp"
                    android:translationZ="@dimen/_2sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_profile_photo"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/user"
                        app:civ_border_color="#00000000"
                        app:civ_border_width="1px"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/full_name"
                        android:textColor="@color/natural1"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tv_profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_stroke"
                        android:drawablePadding="@dimen/_5sdp"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/mohamed_khedr"
                        android:textAlignment="viewStart"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/_12sdp"
                        app:drawableStartCompat="@drawable/ic_blue_person" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/phone_number"
                        android:textColor="@color/natural1"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tv_profile_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_stroke"
                        android:drawablePadding="@dimen/_5sdp"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/_01026730615"
                        android:textAlignment="viewStart"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/_12sdp"
                        app:drawableStartCompat="@drawable/ic_blue_phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/e_mail"
                        android:textColor="@color/natural1"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tv_profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_stroke"
                        android:drawablePadding="@dimen/_5sdp"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/mkheeedr_gmail_com"
                        android:textAlignment="viewStart"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/_12sdp"
                        app:drawableStartCompat="@drawable/ic_blue_email" />


                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_profile_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20sdp"
                    android:background="@drawable/et_stroke_white"
                    android:elevation="@dimen/_1sdp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:translationZ="@dimen/_2sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_profile_user_info">


                    <TextView
                        android:id="@+id/tv_profile_address_word"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/my_addresses"
                        android:textColor="@color/natural1"
                        android:textSize="@dimen/_15sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_profile_addresses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_max="@dimen/_170sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_profile_address_word" />

                    <TextView
                        android:id="@+id/tv_profile_new_address"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/dotted_stroke"
                        android:contentDescription="@string/todo"
                        android:gravity="center"
                        android:text="@string/add_new_address"
                        android:textColor="@color/natural3"
                        android:textSize="@dimen/_13sdp"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_profile_addresses" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_profile_address" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <include
            android:id="@+id/included_progress_profile"
            layout="@layout/include_progress_moto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>