<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@color/progress_back"
    android:id="@+id/layout_alert_dialog_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_150sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/rounded_stroke_white"
        android:elevation="@dimen/_4sdp"
        android:translationZ="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <TextView
            android:id="@+id/tv_alert_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:textColor="@color/secondary"
            android:text="@string/delete_product"
            android:gravity="center"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/tv_alert_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/are_you_sure"
            android:textColor="@color/natural1"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_selectAction"
            app:layout_constraintTop_toBottomOf="@+id/tv_alert_name" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/natural3"
            app:layout_constraintBottom_toTopOf="@+id/layout_selectAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/layout_selectAction"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layoutDirection="ltr"
           >

            <TextView
                android:id="@+id/action_sure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/secondary"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/natural3" />

            <TextView
                android:id="@+id/action_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/primary"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>